--- a/scripts/figure4/tumors_RNAseq_PrimaryVsRelapse.Rmd
+++ b/scripts/figure4/tumors_RNAseq_PrimaryVsRelapse.Rmd
@@ -108,6 +108,63 @@ ggsave(filename = params$figure, radars, width = 3, height = 4)
 
 ```
 
+```{r}
+library(tidyverse)
+# Helper function
+signatureExposure <- function(sampleID, hmatrix){
+  # Find Primary samples and relapse IDs
+  nspIDs <- grep(sampleID, colnames(hmatrix), value = TRUE)
+  annot <- data.frame(ProjectID = nspIDs,
+                      type      = factor(substr(nspIDs, start = 8, stop = 9), 
+                                         levels = c("PT", "RT", "RM")),
+                      stringsAsFactors = FALSE)
+  
+  #print(annot)
+  # Assign color
+  #group.colours <- c(PT = "#2FB47CFF", RT = "#420A68FF", RM = "#F76F5CFF")
+  #group.colours <- group.colours[match(annot$type, names(group.colours))]
+  #names(group.colours) <- annot$ProjectID
+  
+  # format dataframe to radar plots
+  scores <- hmatrix[,annot$ProjectID,drop=FALSE]
+  maxScale <- max(scores)
+  scores <- as.data.frame(t(scores)) %>% 
+    rownames_to_column("ProjectID") %>% 
+    mutate(patient_id = sampleID)
+  left_join(scores, annot, "ProjectID") %>% 
+    mutate(type = as.character(type)) %>% 
+    mutate(type = if_else(type == "PT", "Primary", type)) %>% 
+    mutate(type = if_else(type == "RT", "Relapse (primary site)", type)) %>% 
+    mutate(type = if_else(type == "RM", "Relapse (metastatic site)", type)) %>% 
+    mutate(type = factor(type, levels = c("Primary", "Relapse (primary site)", "Relapse (metastatic site)")))
+  
+  # scores <- cbind(colnames(scores), as.data.frame(t(scores)))
+  # print(scores)
+  
+}
+
+x <- bind_rows(lapply(sampleIDs, signatureExposure, tumors.nmf.hmatrix)) %>% 
+  pivot_longer(-c("ProjectID", "patient_id", "type"), names_to = "Signature", values_to = "Exposure") %>% 
+  #group_by(patient_id, Signature) %>% 
+  group_by(patient_id) %>% 
+  mutate(Exposure = Exposure/max(Exposure)) %>% 
+  #ggplot(aes(x = ProjectID, y = Exposure, fill = Signature)) +
+  ggplot(aes(x = ProjectID, y = Exposure, fill = type)) +
+  geom_bar(stat = "identity") +
+  #facet_grid(Signature~patient_id, scales = "free") +
+  facet_grid(Signature~patient_id, scales = "free_x") +
+  scale_fill_manual(values = c("#2FB47CFF", "#420A68FF", "#F76F5CFF")) +
+  #facet_grid(patient_id~Signature, scales = "free") +
+  theme_cowplot() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1, vjust = 1))
+x
+ggsave(filename = "results/figure4/tumors_RNAseq_PrimaryVsRelapse_barplot.pdf", x, width = 7, height = 6)
+
+```
+
+
+
+
 ```{r savetables}
 # signatureRadar <- function(samples, hmatrix){
 #   scores <- hmatrix[,samples]
