--- a/scripts/figure2/figure2a_tumor_ChIPseq_NMF.Rmd
+++ b/scripts/figure2/figure2a_tumor_ChIPseq_NMF.Rmd
@@ -252,18 +252,36 @@ saveRDS(norm.nmf.hmatrix.hnorm, params$hmatrix_hnorm)
 ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
 ##                        H matrix heatmap annotation                         ##
 ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
+norm.nmf.hmatrix <- readRDS(params$hmatrix_wnorm)
+# read annotation 
+annot <- readRDS(params$annot)
+annot <- annot[match(colnames(norm.nmf.hmatrix), annot$ProjectID),]
+rownames(annot) <- annot$ProjectID
+
+# Read Risk annotation
+library(readxl)
+annotf <- read_xlsx("annotation/annotation_tumors_with_external_phenoData_FW_RISK.xlsx", col_names = TRUE)
+annotf
+
+annot <- annot %>% 
+  mutate(Risk = annotf$RISK[match(ProjectID, annotf$ProjectID)])
+table(annot$Risk)
+
+
 #Annotation for H matrix heatmap
-type.colVector <- list(Type    = c("Tumor"="grey80", "Metastasis"="grey60", "NA"="white"),
+type.colVector <- list(#Type    = c("Tumor"="grey80", "Metastasis"="grey60", "NA"="white"),
                        MYCN    = c("Amp"="grey20", "NonAmp"="grey80", "NA"="white"),
                        Stage   = c("4"="grey20", "1-3;4S"="grey80", "NA"="white"),
                        Age     = c(">18mo"="grey20", "<18mo"="grey80", "NA"="white"),
+                       Risk     = c("HR"="grey20", "IR"="grey50", "LR"="grey80", "NA"="white"),
                        Relapse = c("Yes"="grey20", "No"="grey80", "NA"="grey100"))
 
 #Heatmap annotation
-heat.anno <- HeatmapAnnotation(df = data.frame(Type    = annot$Type,
+heat.anno <- HeatmapAnnotation(df = data.frame(#Type    = annot$Type,
                                                MYCN    = annot$MYCN,
                                                Stage   = annot$Stage,
                                                Age     = annot$Age,
+                                               Risk    = annot$Risk,
                                                Relapse = annot$Relapse),
                                col = type.colVector,
                                show_annotation_name = TRUE, na_col = "white")
@@ -287,12 +305,105 @@ h.heatmap <- Heatmap(norm.nmf.hmatrix,
 print(h.heatmap)
 
 #save H matrix heatmap
-pdf(file = params$figure2a, width=10, height=7)
+#pdf(file = params$figure2a, width=10, height=7)
+pdf(file = "results/figure2/figure2a_tumor_SE_hmatrix.pdf", width=10, height=7)
 #print(h.heatmap)
 #draw(h.heatmap)
 h.heatmap
 dev.off()
 
+
+```
+
+
+
+
+
+```{r enrich }
+##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
+##                                 Wilcox test                                ##
+##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
+my_comparisons <- list(
+  list(Annotation = "MYCN",        value      = "Amp"),
+  list(Annotation = "MYCN",        value      = "NonAmp"),
+  list(Annotation = "Stage",          value      = "4"),
+  list(Annotation = "Stage",          value      = "1-3;4S"),
+  list(Annotation = "Age",            value      = ">18mo"),
+  list(Annotation = "Age",            value      = "<18mo"),
+  list(Annotation = "Risk",           value      = "HR"),
+  list(Annotation = "Risk",           value      = "IR"),
+  list(Annotation = "Risk",           value      = "LR"),
+  list(Annotation = "Relapse",        value      = "Yes"),
+  list(Annotation = "Relapse",        value      = "No"),
+  list(Annotation = "GenomicSubtype", value      = "A"),
+  list(Annotation = "GenomicSubtype", value      = "C"),
+  list(Annotation = "GenomicSubtype", value      = "D"),
+  list(Annotation = "GenomicSubtype", value      = "E")
+)
+
+#annot$
+
+annot <- annot %>%
+  mutate_if(is.factor,  as.character) %>% 
+  mutate(MYCN = if_else(is.na(MYCN), "NA", MYCN)) %>% 
+  mutate(Stage = if_else(is.na(Stage), "NA", Stage)) %>% 
+  mutate(Age = if_else(is.na(Age), "NA", Age)) %>% 
+  mutate(Risk = if_else(is.na(Risk), "NA", Risk)) %>% 
+  mutate(Relapse = if_else(is.na(Relapse), "NA", Relapse)) %>% 
+  mutate(GenomicSubtype = if_else(is.na(GenomicSubtype), "NA", GenomicSubtype))
+#signatures <- c("MYCN", "MES", "MNA.LR", "MNA.HR")
+#names(signatures) <- signatures
+
+
+#rownames(tmp.hmatrix) <- paste0("Sig", 1:4)
+test_mat <- do.call(rbind, lapply(my_comparisons, function(my_comparison){
+  idx <- annot[, my_comparison$Annotation] == my_comparison$value
+  print(paste(my_comparison$Annotation, my_comparison$value))
+  print(table(idx))
+  
+  x <- apply(norm.nmf.hmatrix, 1, function(signature){
+    #print(signature[idx ])
+    wilcox.test(x = signature[idx ], 
+                y = signature[!idx],
+                alternative = "greater")$p.val
+  })
+  
+  # x <- sapply(signatures, function(signature){
+  #   #print(dat[idx,  signature])
+  #   wilcox.test(x = dat[idx,  signature], 
+  #               y = dat[!idx, signature],
+  #               alternative = "greater")$p.val
+  # })
+  x <- t(as.data.frame(x))
+  rownames(x) <- paste0(my_comparison$Annotation, " ", my_comparison$value)
+  x
+}))
+test_mat
+
+
+##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
+##                                   Heatmap                                  ##
+##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
+res_mat <- -log10(test_mat)
+# set non significant to NA
+res_mat[res_mat < -log10(0.05)] <- NA
+h <- Heatmap(res_mat, 
+        #col = inferno(100), 
+        col = RColorBrewer::brewer.pal(9, "YlOrRd")[3:9],
+        na_col = "grey96",
+        #col = RColorBrewer::brewer.pal(11, "BrBG"), 
+        #col = c(inferno(50, begin = 0, end = 0.2),
+        #        inferno(50, begin = 0.5, end = 1)),  
+        name = "-log10(p-value)",
+        cluster_rows = FALSE, 
+        cluster_columns = FALSE,
+        show_row_names = TRUE, 
+        show_column_names = TRUE)
+h
+
+pdf(file = "results/figure2/figure2_AssociationNMFSign_ChIPseq_cohort.pdf", width=4, height=4)
+h
+dev.off()
 
 ```
 
